stuf/src/p6/tests/t022.err
Semantic error on line 5: Cannot initialize the animation_block attribute of a 'triangle' with an animation block designed for a 'circle'.
